Add Cline workflow improvements and NMS MCP setup tooling